compiler/testData/cli/jvm/hmpp/jvmDependenciesInCommonClasspath_friends.out
compiler/testData/cli/jvm/hmpp/src/jvmDependencyConsumer_common.kt:1:25: error: unresolved reference 'Int'.
fun commonProduceInt(): Int = produceInt()
                        ^^^
compiler/testData/cli/jvm/hmpp/src/jvmDependencyConsumer_common.kt:1:31: error: unresolved reference 'produceInt'.
fun commonProduceInt(): Int = produceInt()
                              ^^^^^^^^^^
COMPILATION_ERROR
